<resources>
    <string name="app_name">FlickOff</string>
    <string name="poster_iv_info">Poster Of The Movie</string>
    <string name="popular">Popular</string>
    <string name="highest_rated">Top Rated</string>
    <string name="spinner">Sort By</string>
    <string name="search_title">Search</string>
    <string name="cast">CAST</string>
    <string name="cast_images">Cast images</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="about_me">About The Developer</string>
    <string name="bapusaheb_patil">Bapusaheb Patil</string>
    <string name="my_picture">My picture</string>
    <string name="about_me_detail">Hi! I am a Google-certified Android Developer and an IDF-certified UX Designer.\n\nI love making apps, watchfaces and memes.\n\nNot specifically in that order.\n\nSee more of my apps and my work here:</string>
    <string name="voice_search">Voice Search</string>

    <string-array name="sort_criteria">
        <item>Popular</item>
        <item>Top Rated</item>
        <item>Upcoming</item>
        <item>Now Playing</item>
    </string-array>
</resources>
